--- a/ip-calc-qt/IPCalcForm.ui
+++ b/ip-calc-qt/IPCalcForm.ui
@@ -37,7 +37,7 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="butStart">
        <property name="text">
         <string>Start</string>
        </property>
@@ -63,19 +63,39 @@
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="3">
-      <widget class="QLineEdit" name="lineEdit_4"/>
+      <widget class="QLineEdit" name="lineEdit4">
+       <property name="maxLength">
+        <number>3</number>
+       </property>
+      </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEdit_2"/>
+      <widget class="QLineEdit" name="lineEdit2">
+       <property name="maxLength">
+        <number>3</number>
+       </property>
+      </widget>
      </item>
      <item row="0" column="2">
-      <widget class="QLineEdit" name="lineEdit_3"/>
+      <widget class="QLineEdit" name="lineEdit3">
+       <property name="maxLength">
+        <number>3</number>
+       </property>
+      </widget>
      </item>
      <item row="0" column="0">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="lineEdit1">
+       <property name="maxLength">
+        <number>3</number>
+       </property>
+      </widget>
      </item>
      <item row="0" column="4">
-      <widget class="QLineEdit" name="lineEdit_5"/>
+      <widget class="QLineEdit" name="lineEdit5">
+       <property name="maxLength">
+        <number>2</number>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
@@ -90,9 +110,9 @@
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="LabelResult">
        <property name="text">
-        <string>TextLabel</string>
+        <string/>
        </property>
       </widget>
      </item>
