--- a/ip-calc-qt/IPCalcForm.ui
+++ b/ip-calc-qt/IPCalcForm.ui
@@ -44,7 +44,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="clearButton">
        <property name="text">
         <string>Clear</string>
        </property>
@@ -105,7 +105,7 @@
       <x>9</x>
       <y>9</y>
       <width>381</width>
-      <height>121</height>
+      <height>131</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
@@ -113,6 +113,9 @@
       <widget class="QLabel" name="LabelResult">
        <property name="text">
         <string/>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::TextFormat::PlainText</enum>
        </property>
       </widget>
      </item>
