--- a/ip-calc-qt/IPCalcForm.ui
+++ b/ip-calc-qt/IPCalcForm.ui
@@ -43,10 +43,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="0" column="2">
       <widget class="QPushButton" name="clearButton">
        <property name="text">
         <string>Clear</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>Scan Lan</string>
        </property>
       </widget>
      </item>
