--- a/ip-calc-qt/IPCalcForm.ui
+++ b/ip-calc-qt/IPCalcForm.ui
@@ -51,7 +51,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="ScanButton">
        <property name="text">
         <string>Scan Lan</string>
        </property>
