--- a/ip-calc-qt/IPCalcForm.ui
+++ b/ip-calc-qt/IPCalcForm.ui
@@ -53,7 +53,7 @@
      <item row="0" column="1">
       <widget class="QPushButton" name="ScanButton">
        <property name="text">
-        <string>Main PC IP</string>
+        <string>Scan IP</string>
        </property>
       </widget>
      </item>
@@ -71,6 +71,9 @@
     <layout class="QGridLayout" name="gridLayout_2">
      <item row="0" column="3">
       <widget class="QLineEdit" name="lineEdit4">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
        <property name="maxLength">
         <number>3</number>
        </property>
@@ -78,6 +81,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="lineEdit2">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
        <property name="maxLength">
         <number>3</number>
        </property>
@@ -85,6 +91,9 @@
      </item>
      <item row="0" column="2">
       <widget class="QLineEdit" name="lineEdit3">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
        <property name="maxLength">
         <number>3</number>
        </property>
@@ -92,6 +101,9 @@
      </item>
      <item row="0" column="0">
       <widget class="QLineEdit" name="lineEdit1">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
        <property name="maxLength">
         <number>3</number>
        </property>
@@ -99,6 +111,9 @@
      </item>
      <item row="0" column="4">
       <widget class="QLineEdit" name="lineEdit5">
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(85, 85, 255);</string>
+       </property>
        <property name="maxLength">
         <number>2</number>
        </property>
